[FIP-43] Support implicit partitions